--- a/E-shop-Hylan/produkty.html
+++ b/E-shop-Hylan/produkty.html
@@ -81,28 +81,66 @@
     </nav>
 
     <div class="container mt-4">
-        <h1 class="text-center">Vítej na mojem E-Shopu</h1>
-        <div class="row">
+        <div class="col-md-4">
+            <div class="product-card">
+                <img src="midkocka.webp" alt="Product 2">
+                <h5 class="mt-2">Kasa-Jizo (nejlepší výběr)</h5>
+                <p>420kč</p>
+                <button class="btn btn-cart">Přidat do košíku</button>
+            </div>
+        </div>
             <div class="col-md-4">
                 <div class="product-card">
-                    <img src="levnakocka.png" alt="Product 1">
-                    <h5 class="mt-2">Levná kočka</h5>
-                    <p>69kč</p>
+                    <img src="kocka2.png" alt="Product 1">
+                    <h5 class="mt-2">Tank cat</h5>
+                    <p>150kč</p>
                     <button class="btn btn-cart">Přidat do košíku</button>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="product-card">
-                    <img src="midkocka.webp" alt="Product 2">
-                    <h5 class="mt-2">Mid kočka "nejlepší výběr"</h5>
-                    <p>420kč</p>
+                    <img src="kocka3.png" alt="Product 1">
+                    <h5 class="mt-2">Flying Cat</h5>
+                    <p>55kč</p>
+                    <button class="btn btn-cart">Přidat do košíku</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="product-card">
+                    <img src="kocka4.png" alt="Product 1">
+                    <h5 class="mt-2">Dragon Cat</h5>
+                    <p>45kč</p>
+                    <button class="btn btn-cart">Přidat do košíku</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="product-card">
+                    <img src="kocka5.png" alt="Product 1">
+                    <h5 class="mt-2">Cat</h5>
+                    <p>10kč</p>
+                    <button class="btn btn-cart">Přidat do košíku</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="product-card">
+                    <img src="kocka6.webp" alt="Product 1">
+                    <h5 class="mt-2">Can CAn Cat</h5>
+                    <p>199kč</p>
+                    <button class="btn btn-cart">Přidat do košíku</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="product-card">
+                    <img src="kocka7.webp" alt="Product 1">
+                    <h5 class="mt-2">Fencer Cat</h5>
+                    <p>201kč</p>
                     <button class="btn btn-cart">Přidat do košíku</button>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="product-card">
                     <img src="drahakocka.webp" alt="Product 3">
-                    <h5 class="mt-2">Drahá kočka</h5>
+                    <h5 class="mt-2">Izanagi</h5>
                     <p>4 269kč</p>
                     <button class="btn btn-cart">Přidat do košíku</button>
                 </div>
