--- a/E-shop-Hylan/obrazky.html
+++ b/E-shop-Hylan/obrazky.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <title>E-shop s Kočkama</title>
+    <title>Obrázky</title>
     <style>
         body {
             background-color: #fff;
@@ -46,7 +46,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="kocur.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Kocur E-shop
             </a>
@@ -56,7 +56,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Domov</a>
+                        <a class="nav-link" href="index.html">Domov</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="produkty.html">Produkty</a>
@@ -65,7 +65,7 @@
                         <a class="nav-link" href="kontakty.html">Kontakty</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="obrazky.html">Obrázky</a>
+                        <a class="nav-link active" aria-current="page" href="obrazky.html">Obrázky</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="okockach.html">O kočkách</a>
@@ -81,31 +81,16 @@
     </nav>
 
     <div class="container mt-4">
-        <h1 class="text-center">Vítej na mojem E-Shopu</h1>
+        <h1 class="text-center">Galerie Obrázků</h1>
         <div class="row">
             <div class="col-md-4">
-                <div class="product-card">
-                    <img src="levnakocka.png" alt="Product 1">
-                    <h5 class="mt-2">Levná kočka</h5>
-                    <p>69kč</p>
-                    <button class="btn btn-cart">Přidat do košíku</button>
-                </div>
+                <img src="kocky1.webp" alt="Obrázek 1" class="img-fluid mb-4">
             </div>
             <div class="col-md-4">
-                <div class="product-card">
-                    <img src="midkocka.webp" alt="Product 2">
-                    <h5 class="mt-2">Mid kočka "nejlepší výběr"</h5>
-                    <p>420kč</p>
-                    <button class="btn btn-cart">Přidat do košíku</button>
-                </div>
+                <img src="kocky2.png" alt="Obrázek 2" class="img-fluid mb-4">
             </div>
             <div class="col-md-4">
-                <div class="product-card">
-                    <img src="drahakocka.webp" alt="Product 3">
-                    <h5 class="mt-2">Drahá kočka</h5>
-                    <p>4 269kč</p>
-                    <button class="btn btn-cart">Přidat do košíku</button>
-                </div>
+                <img src="kocky3.webp" alt="Obrázek 3" class="img-fluid mb-4">
             </div>
         </div>
     </div>
