--- a/E-shop-Hylan/okockach.html
+++ b/E-shop-Hylan/okockach.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <title>E-shop s Kočkama</title>
+    <title>O kočkách</title>
     <style>
         body {
             background-color: #fff;
@@ -46,7 +46,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="kocur.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Kocur E-shop
             </a>
@@ -56,7 +56,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Domov</a>
+                        <a class="nav-link" href="index.html">Domov</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="produkty.html">Produkty</a>
@@ -68,7 +68,7 @@
                         <a class="nav-link" href="obrazky.html">Obrázky</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="okockach.html">O kočkách</a>
+                        <a class="nav-link active" aria-current="page" href="okockach.html">O kočkách</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -81,32 +81,20 @@
     </nav>
 
     <div class="container mt-4">
-        <h1 class="text-center">Vítej na mojem E-Shopu</h1>
+        <h1 class="text-center">O Kočkách</h1>
+        <p class="text-center">Battle Cats je populární mobilní hra, která se zaměřuje na vtipné a strategické bitvy mezi různými kočičími postavami. Hráči shromažďují a vylepšují kočky, které bojují proti různým nepřátelům v zábavných a absurdních scénářích.</p>
         <div class="row">
-            <div class="col-md-4">
-                <div class="product-card">
-                    <img src="levnakocka.png" alt="Product 1">
-                    <h5 class="mt-2">Levná kočka</h5>
-                    <p>69kč</p>
-                    <button class="btn btn-cart">Přidat do košíku</button>
-                </div>
+            <div class="col-md-6">
+                <h3>Historie koček</h3>
+                <p>Battle Cats byla poprvé vydaná v roce 2011 v Japonsku a od té doby se stala celosvětovým fenoménem. Hra je známá svým unikátním stylem, humorem a neuvěřitelnými postavami koček, které mají různé schopnosti a vzhledy.</p>
             </div>
-            <div class="col-md-4">
-                <div class="product-card">
-                    <img src="midkocka.webp" alt="Product 2">
-                    <h5 class="mt-2">Mid kočka "nejlepší výběr"</h5>
-                    <p>420kč</p>
-                    <button class="btn btn-cart">Přidat do košíku</button>
-                </div>
+            <div class="col-md-6">
+                <h3>Kočky v Battle Cats</h3>
+                <p>V Battle Cats existuje široká škála kočičích postav, od obyčejných koček po neuvěřitelné a silné bojovníky. Každá kočka má svou vlastní unikátní schopnost, která může být využita k poražení silnějších nepřátel.</p>
             </div>
-            <div class="col-md-4">
-                <div class="product-card">
-                    <img src="drahakocka.webp" alt="Product 3">
-                    <h5 class="mt-2">Drahá kočka</h5>
-                    <p>4 269kč</p>
-                    <button class="btn btn-cart">Přidat do košíku</button>
-                </div>
-            </div>
+        </div>
+        <div class="text-center mt-4">
+            <img src="kocky4.jpg" alt="Battle Cats" class="img-fluid" style="max-width: 400px;">
         </div>
     </div>
 </body>
