--- a/okockach.html
+++ b/okockach.html
@@ -90,7 +90,7 @@
             </div>
             <div class="col-md-6">
                 <h3>Kočky v Battle Cats</h3>
-                <p>V Battle Cats existuje široká škála kočičích postav, od obyčejných koček po neuvěřitelné a silné bojovníky. Každá kočka má svou vlastní unikátní schopnost, která může být využita k poražení silnějších nepřátel.</p>
+                <p>V Battle Cats existuje široký výběr kočičích postav, od obyčejných koček po neuvěřitelné a silné bojovníky. Každá kočka má svou vlastní unikátní schopnost, která může být využita k poražení silnějších nepřátel.</p>
             </div>
         </div>
         <div class="text-center mt-4">
